- Added the script for Attracted Reef Bull to make the quest The Way to His Heart... trigger for all members of a group.
- Added Steel Gate Artifact to the loot table of Steel Gate Excavator for the quest The Artifacts of Steel Gate.
- Updated the flags of Steel Gate Artifact to allow all members of a group to loot it.

[2024-04-20]
- Added Dwarven Keg to the loot table of Deranged Explorer for the quest What's in That Brew?.
- Updated the flags of Dwarven Keg to allow all members of a group to loot it.
- Added Horde Armaments to the loot table of Anub'ar Ambusher for the quest Into the Fold.
- Updated the flags of Horde Armaments to allow all members of a group to loot it.

[2024-04-21]
- Added Composite Ore to the loot table of Wastes Digger for the quest Stocking Up.
- Updated the flags of Composite Ore to allow all members of a group to loot it.

[2024-04-22]
- Added Everfrost Shard to the loot table of Ravenous Jormungar for the quest Raising Hodir's Spear.
- Added Everfrost Shard to the loot table of Viscous Oil for the quest Raising Hodir's Spear.
- Updated the flags of Everfrost Shard to allow all members of a group to loot it.
- Added Small Proto-Drake Egg to the loot table of Stormpeak Hatchling for the quest Veranus.
- Updated the flags of Small Proto-Drake Egg to allow all members of a group to loot it.

[2024-04-22]
- Added the script for the spell Summon Dark Messenger to make the quest Not a Bug give credit to all members of a group.

[2024-05-02]
- Added the script for Zul'Drak to make the quest Our Only Hope trigger for all members of a group.
- Added the script for the spell Ahunae's Knife to make the quest Scalps! give credit to all members of a group.

[2024-05-25]
- Updated the smart script for Argent Valiant to give all members of a group the kill credit.

[2024-06-11]
- Updated the respawn time of Crossroads' Supply Crates.

[2024-07-04]
- Updated the flags of Wailing Essence to allow all members of a group to loot it.