@@ -719,3 +719,7 @@
 
 [2024-07-04]
 - Updated the flags of Wailing Essence to allow all members of a group to loot it.
+
+[2024-07-08]
+- Updated the respawn time of Loose Soil.
+- Updated the respawn time of Ancient Relic.
